[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LangMet"
version = "0.1.2"
description = "Observability and performance metrics for LLM and RAG systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dr Mabrouka Abuhmida" }]
dependencies = []
keywords = ["llm", "rag", "analytics", "metrics", "observability"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0.23"]
fastapi = ["fastapi>=0.104.1", "pydantic>=2.5.0"]
dev = ["pytest>=8.0.0", "ruff>=0.7.0", "build>=1.2.2", "twine>=5.1.1"]

[tool.setuptools.packages.find]
include = ["langmet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
